# adv-deep-hedging-irm

./: .coverage  .gitattributes  CLAUDE.md  Dockerfile  Makefile  README.md  STRUCTURE.md  create_fixed_notebook.py  experiment.py  experiment_firm.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: protocol-smoke.yml
Phase Blueprint/: Phase 2.md
configs/: base.yaml  costs.yaml  data.yaml  firm.yaml
configs/model/: c_dyn.yaml  c_static.yaml  irm.yaml  rl_gan.yaml  rl_gbm.yaml
data/: regime_labels.csv  vix_data.csv
docs/: accounting.md  protocol_v1.0.md  stats_protocol.md
experiments/baseline/: baseline_metrics.txt  config.yaml  metrics.json
notebooks/: analysis.ipynb  analysis_example2.ipynb  firm_results.ipynb  regime_analysis.ipynb
phase_blueprint/: Phase 1.md
runs/20250809_225707/: dataset_card.json
runs/20250809_225739/: dataset_card.json
runs/20250810_095350/: dataset_card.json  test_qt18_market_2018-10-01_2018-12-31.csv  valid_option_2020-06-01_2020-12-31.csv
runs/20250810_163410/: dataset_card.json
runs/phase1_full_matrix/: matrix_summary.yaml
runs/phase1_matrix/: matrix_summary.yaml
runs/phase1_test/: matrix_summary.yaml
runs/phase1_test_cdyn/: matrix_summary.yaml
runs/phase1_test_cstatic/: analysis_results.csv  matrix_summary.yaml
scripts/: analyze_phase1_results.py  materialize_datasets.py  run_matrix.py
src/deep_hedging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deephedge/: config.py  train.py  (+1 more)
tests/: conftest.py  test_cvar.py  test_end2end.py  test_env.py  test_irm.py  test_pricer.py  test_regime_detector.py
(+290 files in other folders)
